--- a/ProjectPresentation/KAL_ECE5201_TermPresentation.tex
+++ b/ProjectPresentation/KAL_ECE5201_TermPresentation.tex
@@ -584,19 +584,29 @@ The field at $z=L$ becomes
     % \printbibliography  % Biblatex
     \bibliography{ECE5201_Citations}  % Bibtex
     \vspace{1em}
+    \begin{minipage}[t]{0.6\textwidth}
+        \vspace{-6em}
+        
         \textbf{Funding:}
-        This research is currently unfunded.\\
-        \vspace{0.5em}
+        This research is unfunded.\vspace{0.7em}\noindent\\
+        \vspace{0.7em}\noindent
         \textbf{Acknowledgments:}
         The author thanks T. Saule
-        for his helpful contributions.\\
-        \vspace{0.5em}
+        for his helpful conversations.\\
+        \vspace{0.7em}\noindent
         \textbf{Disclosures:}
         The authors declare no conflicts of interest.\\
-        \vspace{0.5em}
+        % \vspace{0.5em}\noindent
         \textbf{Data Availability:} \LaTeX and MATLAB code for this project and
-        its reports can be found on the author's github:
-        \url{https://github.com/kevinlindstrom/ECE5201}.
+        its reports can be found on the author's github:\\
+        \url{https://github.com/kevinlindstrom/ECE5201_TermProject}.
+    \end{minipage}
+    \begin{minipage}{0.35\textwidth}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.65\textwidth]{figs/Github.png}
+        \end{figure}
+    \end{minipage}
    
 \end{frame}
 
